[project]
name = "pdf-domain-extractor"
version = "0.1.0"
description = "Extrai dominios de pdf"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.7",
    "validators>=0.35.0",
]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalContextManager = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
